# sub-mesh

./: CMakeLists.txt  TransformVertexShader.vertexshader  TriMesh.h  main.cpp  phong.frag  phong.vert
common/: controls.cpp
shaders/: TextureFragmentShader.frag  phong.frag  phong.vert
